tweaked about title

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Contact Doctor Ken{% endblock %}
+{% block title %}About dj ken dental work{% endblock %}
 {% block meta_description %}This is the website pf doctor ken{% endblock %}
 {% block content %}
 <!-- END nav -->
